Make RecordExtractor preserve empty array/map and map entries with empty value (#14547)